# embedded-hal-vcd

./: CONTRIBUTING.md  Cargo.toml  README.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: cd.yml
examples/: in_out.rs  test2.vcd
examples/data/: .gitignore
src/: lib.rs  main.rs  pins.rs  reader.rs  writer.rs
