[package]
name = "embedded-hal-vcd"
version = "0.1.0"
authors = ["Niclas Hoyer <niclas@verbugt.de>"]
edition = "2018"

# patches needed to adapt to embedded-hal 1.0.0
[patch.crates-io]
embedded-hal-mock = { git = "https://github.com/niclashoyer/embedded-hal-mock", branch = "hal-1.0.0" }

[dependencies]
vcd = "0.6"
embedded-time = "0.10"
num-derive = "0.3"
num-traits = "0.2"
embedded-hal = "1.0.0-alpha.6"
embedded-hal-sync-pins = { version = "0.5", features = ["vcd-value"] }
fnv = "1.0"

[dev-dependencies]
embedded-hal-mock = "0.8.0"
