[package]
name = "embedded-hal-vcd"
version = "0.2.0"
edition = "2021"
description = "A vcd reader/writer for embedded_hal"
repository = "https://github.com/niclashoyer/embedded-hal-vcd"
license = "MIT OR Apache-2.0"

[dependencies]
vcd = "0.6"
embedded-time = "0.12"
num-derive = "0.3"
num-traits = "0.2"
embedded-hal = "1.0.0-alpha.9"
embedded-hal-sync-pins = { version = "0.7", features = ["vcd-value"] }
fnv = "1.0"

[dev-dependencies]
pretty_assertions = "1.3"
synchronized-writer = "1.1"
